--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,24 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: "Axiforma";
+  src: url("./assets/fonts/Axiforma/Axiforma-Regular.woff2") format("woff2"),
+    url("./assets/fonts/Axiforma/Axiforma-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Axiforma";
+  src: url("./assets/fonts/Axiforma/Axiforma-Bold.woff2") format("woff2"),
+    url("./assets/fonts/Axiforma/Axiforma-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Apply globally */
+body {
+  font-family: "Axiforma", sans-serif;
+}
