--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @font-face {
   font-family: "Axiforma";
   src: url("./assets/fonts/Axiforma/Axiforma-Regular.woff2") format("woff2"),
-    url("./assets/fonts/Axiforma/Axiforma-Regular.woff") format("woff");
+    url("./assets/fonts/Axiforma/Axiforma-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -12,7 +12,7 @@
 @font-face {
   font-family: "Axiforma";
   src: url("./assets/fonts/Axiforma/Axiforma-Bold.woff2") format("woff2"),
-    url("./assets/fonts/Axiforma/Axiforma-Bold.woff") format("woff");
+    url("./assets/fonts/Axiforma/Axiforma-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
